--- a/_config.yml
+++ b/_config.yml
@@ -69,8 +69,8 @@ social-share-items: ['twitter', 'facebook', 'linkedin']
 baidu: false
 baidu-url: ''
 # GA
-google: false
-google-ID: ''
+google: true
+google-ID: 'UA-141693863-1'
 
 # Blog header backup colors: It's not a site variable. This will be written in each post as a local variable
 color: rgb(154,133,255) rgb(255,90,90) rgb(255,210,32) rgb(98,170,255)
